# SBFoundation

./: .gitignore  README.md  claude.md  package-lock.json  package.json  prefect.yaml  pyproject.toml  pytest.ini
.claude/: settings.local.json
.streamlit/: config.toml  secrets.toml
apps/coverage_dashboard/: Home.py  db.py  pyproject.toml
apps/coverage_dashboard/.streamlit/: config.toml
apps/coverage_dashboard/pages/: 1_Global_Overview.py  2_Dataset_Drilldown.py  3_Ticker_Drilldown.py  4_Ingestion_Diagnostics.py
config/: dataset_keymap backup_20260310.yaml  dataset_keymap.yaml  dataset_keymap.yaml.backup  dataset_keymap_test.yaml
db/: test.py
docs/: BronzeLayerTickerState.md  Ingestion Graphic.odp  Market_Cycle_Metrics_User_Stories.md  UI screens.odp  analytics_ux.md  architecture.pptx  bis-credit-gap.json  copilot-instructions.md  covered_call.md  dashboard.md  data injestion and consolidation.md  data_flow.md  demo_app.py  dhandho_framework.md  domain_datasets_reference.md  economics.md  evaluating-quality.md  event_driven.md  fin_planner.md  hardware.md  improvements.md  income_calendar_analytics.md  leverage_for_long_run.md  llm_architecture.md  macro_economics.md  magic_formula.md  mvps-driven-allocation-tilt-strategy.md  mvps_alpha_vantage.md  oldapp.md  portfolio_tracker.md  prompt_engineering.md  pub_sub_events.md  schwab_api.md  state_machine.md  test.md  test.py  tickers.csv  todo.md  trading_dashboard.md  validation_steps.md
scripts/: cleanup_ticker_state_partitions.py  clear_req_too_soon.py  extend_dataset_keymap.py  remove_gold.py  (+3 more)
(+488 files in other folders)
