[tool.poetry]
name = "coverage-dashboard"
version = "0.1.0"
description = "SBFoundation data coverage Streamlit dashboard"
authors = ["Todd <toddbadams@outlook.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
streamlit = "^1.40"
plotly = "^5.24"
pandas = "^2.3"
duckdb = "^1.4"
sb-foundation = {path = "../../", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
